# near-sdk-rs

cargo-near/: Cargo.toml  build.rs
cargo-near/src/: cargo_manifest.rs  crate_metadata.rs  main.rs  metadata.rs  util.rs
cargo-near/src/workspace/: manifest.rs  metadata.rs  mod.rs
cargo-near/templates/tools/generate-metadata/: _Cargo.toml  main.rs
contract-builder/: Dockerfile
examples/aci/: Cargo.toml  build.sh
examples/aci/adder/: Cargo.toml
examples/aci/delegator/: Cargo.toml
examples/aci/delegator/src/: lib.rs
examples/aci/res/: adder-metadata.json  adder.wasm  delegator.wasm
examples/callback-results/res/: callback_results.wasm
examples/callback-results/src/: lib.rs
examples/cross-contract-calls/high-level/: Cargo.toml
examples/cross-contract-calls/res/: cross_contract_high_level.wasm  cross_contract_low_level.wasm
examples/factory-contract/res/: factory_contract_high_level.wasm  factory_contract_low_level.wasm
examples/fungible-token/res/: defi.wasm  fungible_token.wasm
examples/lockable-fungible-token/res/: lockable_fungible_token.wasm
examples/mission-control/res/: mission_control.wasm
examples/non-fungible-token/res/: approval_receiver.wasm  non_fungible_token.wasm  token_receiver.wasm
examples/status-message/: Cargo.toml
examples/status-message-collections/res/: status_message_collections.wasm
examples/status-message/res/: status_message.wasm
near-sdk/: Cargo.toml
near-sdk/src/: abi.rs  lib.rs  metadata.rs  promise.rs
near-sdk/src/private/: mod.rs
schemafy-near/schemafy_lib/: Cargo.toml
schemafy-near/src/: lib.rs
(+12 files in other folders)
