[package]
name = "cargo-near"
version = "0.0.1"
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.14.2"
clap = { version = "3.1.6", features = ["derive", "env"] }
colored = "2.0"
env_logger = "0.9.0"
near-sdk = { path = "../near-sdk" }
log = "0.4.16"
tempfile = "3.3.0"
toml = "0.5.8"
semver = { version = "1.0.6", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
url = { version = "2.2.2", features = ["serde"] }

[build-dependencies]
anyhow = "1.0"
platforms = "2.0.0"

[workspace]
members = ["."]
