[package]
name = "delegator"
version = "1.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { path = "../../../near-sdk" }
schemars = "0.8.8"
schemafy-near = { path = "../../../schemafy-near" }
serde = { version = "1", features = ["derive"] }
